CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc1

	- The pdftops filter incorrectly auto-rotated pages when
	  the user already had specified the proper orientation
	  (STR #207)
	- Fixed AIX shared library support (STR #201)
	- Added support for live testing with Valgrind (STR
	  #193)
	- The CGI programs now collect the list of needed
	  attributes for the class, job, and printer template
	  files (STR #192)
	- The scheduler now passes the first port that is bound
	  to the local loopback or "any" addresses to the CGI
	  programs rather than the port that the browser
	  connected to (STR #103)
	- The cupstestppd program now checks for bad
	  JobPatchFile attributes and incorrect versions of the
	  Manufacturer attribute for HP printers (STR #155)
	- The filter makefile incorrectly installed
	  libcupsimage.a in the filter directory (STR #180)
	- The scheduler did not verify that the job history
	  files define the job-priority and
	  job-originating-user-name attributes (STR #178)
	- The pstops filter didn't handle poorly-formed binary
	  PostScript files that had CTRL-D's in them (STR #156)
	- The ppdOpen*() and cupsLangGet() functions did not
	  make a copy of the old locale strings when using the
	  POSIX locale when reading files, which apparently
	  caused problems with some implementations of the
	  standard C library. (STR #159)
	- The pdftops filter did not work properly with some
	  embedded Type1C fonts (STR #177)
	- Updated the pdftops filter to be based upon Xpdf
	  2.02pl1 (STR #191)
	- The scheduler did not reset the group list when
	  running CGI and filter processes (STR #185)
	- The scheduler no longer calls malloc and free from the
	  signal handlers (STR #190)
	- The USB backend now uses the manufacturer and model
	  strings if the description string is not available
	  (STR #174)
	- The ppdOpen functions still supported the
	  VariablePaperSize attribute, which was removed in v4.0