@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.20rc1
 
+	- The imagetoraster filter did not support all of the
+	  page device attributes (STR #208)
 	- The pdftops filter incorrectly auto-rotated pages when
 	  the user already had specified the proper orientation
 	  (STR #207)
